--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "babel-plugin-macros": "^3.1.0",
-    "node-sass": "^7.0.3",
+    "imagesloaded": "^5.0.0",
+    "isotope-layout": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
-    "sass": "^1.69.3",
+    "react-scroll": "^1.9.0",
+    "styled-components": "^6.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
