--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://beka-ab.github.io/Portfolio",
   "name": "cv-app",
   "version": "0.1.0",
   "husky": {
@@ -44,7 +45,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test:coverage": "npm test -- --coverage --watchAll=false",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -86,6 +89,7 @@
     "@babel/preset-react": "^7.22.15",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
+    "gh-pages": "^6.1.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-mock": "^29.7.0",
